Closed
Bug 485494
Opened 17 years ago
Closed 17 years ago
the message count wrong on virtual folders when opening virtual folder in a new window
Categories
(Thunderbird :: Mail Window Front End, defect)
Thunderbird
Mail Window Front End
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.0b3
People
(Reporter: eagle.lu, Assigned: eagle.lu)
Details
Attachments
(1 file, 4 obsolete files)
|
827 bytes,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
Steps to re-produce:
1. Start TB
2. Create a virtual folder defined as "To or CC" to my e-mail address
3. Select the virtual folder
4. Right click on the folder and select "Open" in the popup menu
5. Send to an e-mail to your e-mail address from another machine or through
a web
6. Click "Get Mail" button to get new mails.
Expected result:
The Unread Message count should be increased by one
Actual result:
The count is increased by two.
Assignee: nobody → brian.lu
Attachment #369640 -
Flags: review?(bugzilla)
Comment 2•17 years ago
|
||
what if I mark an existing message read/unread from an other window? Shouldn't that adjust the read count?
Comment 3•17 years ago
|
||
Comment on attachment 369640 [details] [diff] [review]
Update the unread count only when the new message isn't in the cache
Passing to David - he knows this code better than I do.
Attachment #369640 -
Flags: review?(bugzilla) → review?(bienvenu)
Attachment #369640 -
Flags: review?(bienvenu) → review-
I'm making a new patch and will post it here when it's ready
Attachment #369640 -
Attachment is obsolete: true
Attachment #370581 -
Flags: review?(bienvenu)
Comment 6•17 years ago
|
||
this patch seems to handle getting two notifications for the same change by remembering the previous notification and ignoring it. Why are we getting two notifications? Are we registering twice? Seems like it would be better to fix the root cause.
Attachment #370581 -
Attachment is obsolete: true
Attachment #373288 -
Flags: review?(bienvenu)
Attachment #370581 -
Flags: review?(bienvenu)
Comment 8•17 years ago
|
||
Comment on attachment 373288 [details] [diff] [review]
Register the listener only once
cool thx, that's much nicer. So the issue is that we're loading virtualFolders.dat twice, and adding multiple listeners. I'm wondering if we should just protect against this at the start of this function, and return early.
Comment 9•17 years ago
|
||
Comment on attachment 373288 [details] [diff] [review]
Register the listener only once
thinking about it a bit more, that's what I'd like - a check for m_virtualFoldersLoaded at the start of this method. Thx for working on this!
Attachment #373288 -
Flags: review?(bienvenu) → review-
| Assignee | ||
Comment 10•17 years ago
|
||
Attachment #373288 -
Attachment is obsolete: true
Attachment #373609 -
Flags: review?(bienvenu)
Comment 11•17 years ago
|
||
FWIW: There is an extra space between return and NS_OK.
| Assignee | ||
Comment 12•17 years ago
|
||
Attachment #373609 -
Attachment is obsolete: true
Attachment #373612 -
Flags: review?(bienvenu)
Attachment #373609 -
Flags: review?(bienvenu)
Comment 13•17 years ago
|
||
Comment on attachment 373612 [details] [diff] [review]
remove extra space
looks good, thx for fixing this.
Attachment #373612 -
Flags: superreview+
Attachment #373612 -
Flags: review?(bienvenu)
Attachment #373612 -
Flags: review+
Keywords: checkin-needed
Comment 14•17 years ago
|
||
Comment 15•17 years ago
|
||
(In reply to comment #14)
> Pushed:
> http://hg.mozilla.org/comm-central/rev/2fa9b1dc9030
Please set the target milestone when marking fixed, it helps with tracking later on.
OS: Solaris → All
Hardware: x86 → All
Target Milestone: --- → Thunderbird 3.0b3
You need to log in
before you can comment on or make changes to this bug.
Description
•