Bug 485494 the message count wrong on virtual folders when opening virtual folder in a new window r+sr=bienvenu